--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
-    "sequelize": "^5.15.0"
+    "sequelize": "^5.15.0",
+    "sqlite3": "^4.0.9"
   }
 }
